data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_797.wast
;; 8. **Recursive Loop with Invalid Type Inversion**:     - **Description**: Design a recursive loop that inverts operand types in branches back to the loop header, checking if reinitialized types conform to loop declarations.     - **Constraint**: Type validation and operand consistency in recursive loops.     - **CFG Impact**: Type mismatches in recursive loops alter expected execution paths causing CFG inconsistencies.

(assert_invalid
  (module
    (func $recursive-loop-invalid-type-inversion
      (i32.const 1)
      (loop (result f64)
        (br 0 (f64.const 2.0))
      )
    )
  )
  "type mismatch"
)